--- a/Java_script/Index.html
+++ b/Java_script/Index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <h1 class="h1-text">Hello Java script Welcome</h1>
+  <h1 class="h1-text">Hello Java script Welcome here</h1>
 </body>
 
 </html>
