JS object started

--- a/Java_script/JS_object.html
+++ b/Java_script/JS_object.html
@@ -6,10 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Object</title>
   <script src="object.js"></script>
+  <style>
+    .text-center {
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>Object In javascript</h1>
+  <h1 clas="text-center">Object In javascript</h1>
 </body>
 
 </html>
