--- a/Java_script/JS_object.html
+++ b/Java_script/JS_object.html
@@ -7,14 +7,14 @@
   <title>JS Object</title>
   <script src="object.js"></script>
   <style>
-    .text-center {
-      text-align: center;
+    .text-center-h1 {
+      text-align: center !important;
     }
   </style>
 </head>
 
 <body>
-  <h1 clas="text-center">Object In javascript</h1>
+  <h1 class="text-center-h1">Object In javascript</h1>
 </body>
 
 </html>
