--- a/Java_script/fuctions.html
+++ b/Java_script/fuctions.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fuctions</title>
+  <script src="fuctions.js"></script>
   <style>
     .text-style {
       text-align: center;
