--- a/Java_script/html_files/Js_Array.html
+++ b/Java_script/html_files/Js_Array.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="array.js"></script>
+  <script src="Js_files/array.js"></script>
   <title>Array</title>
   <style>
     .text-style {
