--- a/Java_script/html_files/Numbers.html
+++ b/Java_script/html_files/Numbers.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Numbers</title>
-  <script src="scripts/array.js"></script>
+  <script src="scripts/numbers.js"></script>
   <style>
     .text-style {
       text-align: center;
