--- a/JS_Interview/Interview.html
+++ b/JS_Interview/Interview.html
@@ -6,21 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="interview.js"></script>
     <title>Interview</title>
+    <style>
+        h5 {
+            text-align: center;
+            font-size: 20px;
+            font-weight: 600;
+        }
+    </style>
 
 </head>
 
 <body>
     <h5>Hello Interview</h5>
-    <ul>
-        What is JavaScript?
-        <li>JavaScript is a lightweight, interpreted programming language with object-oriented capabilities that allows
-            you to build interactivity into otherwise static HTML pages.
-            The general-purpose core of the language has been embedded in Netscape, Internet Explorer, and other web
-            browsers.</li>
 
-            <br>
-        
-    </ul>
 </body>
 
 </html>
