--- a/JS_Interview/Interview.html
+++ b/JS_Interview/Interview.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="interview.js"></script>
     <title>Interview</title>
+    <style>
+        h5{
+            text-align: center;
+            padding: 20px;
+        }
+    </style>
 
 </head>
 
 <body>
-    <h5>Hello Interview</h5>
+    <h5>Lorem ipsum dolor sit amet.</h5>
 </body>
 
 </html>
