--- a/js_preparation/fuctions.html
+++ b/js_preparation/fuctions.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fuctions In JavaScript</title>
+  <script src="fuctions.js"></script>
   <style>
     h1{
       text-align: center;
