--- a/js_preparation/string.html
+++ b/js_preparation/string.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fuctions In JavaScript</title>
+  <title>String In JavaScript</title>
   <script src="string.js"></script>
   <style>
-    h1{
+    h1 {
       text-align: center;
     }
   </style>
 </head>
+
 <body>
   <h1>Hello String</h1>
 </body>
+
 </html>
